--- a/notebooks/02_panel_tasks.ipynb
+++ b/notebooks/02_panel_tasks.ipynb
@@ -5,7 +5,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Panel Tasks - Classification, Regression, Clustering & Pipelines\n",
+    "### Overview of this notebook\n",
+    "\n",
+    "This notebook:\n",
+    "\n",
+    "* introduction to time series classification, regression, clustering\n",
+    "* `sktime` data format fo \"time series panels\" = collections of time series\n",
+    "* basic vignettes for TSC, TSR, TScl\n",
+    "* advanced vignettes - pipelines, ensembles, tuning\n",
+    "* appendix: data loading\n",
+    "* appendix: implementing third party estimators for TSC, TSR, TScl"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Learning tasks - Classification, Regression, Clustering & more\n",
     "\n",
     "#### What are Panel tasks?\n",
     "\n",
@@ -37,8 +54,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Table of Contents\n",
-    "    -- TODO --"
+    "## 2.1 Panel data - `sktime` data formats\n",
+    "\n",
+    "Preferred format 1: `pd.DataFrame` with 2-level `MultiIndex`, (instance, time), cols= variables\n",
+    "\n",
+    "Preferred format 2: 3D `np.ndarray` with index (instance, variable, time)\n",
+    "\n",
+    "* `sktime` supports and recognizes multiple data formats for convenience and internal use, e.g., `dask`, `xarray`\n",
+    "* abstract data type = \"scitype\"; in-memory specification = \"mtype\"\n",
+    "* More information in tutorial on [in-memory data representations and data loading](https://www.sktime.net/en/latest/examples/AA_datatypes_and_datasets.html#In-memory-data-representations-and-data-loading)"
    ]
   },
   {
@@ -46,10 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.1 Data Formats and its Types\n",
-    "   Before diving into the exciting world of experimenting with different estimators available in `sktime` for a variety of time series tasks, it is important to grasp how `sktime` handles the diverse range of data representations in the realm of time series analysis.\n",
-    "\n",
-    "   The following section contains information on data types and loaders with moderate depth - to help you get started. Visit [In-memory data representations and data loading](https://www.sktime.net/en/latest/examples/AA_datatypes_and_datasets.html#In-memory-data-representations-and-data-loading) tutorial to get a comprehensive understanding of them."
+    "### 2.1.1 preferred format 1 - `pd-multiindex` specification"
    ]
   },
   {
@@ -57,49 +78,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1.1 `scitype` vs `mtype` in `sktime`\n",
-    "    \n",
-    "- **_scitype_** is short for Data Scientific Data Type and is defined by relational and statistical properties of the data being represented and common operations that can be applied to it. Think of scitype an abstract object, free from machine-specific implementations. For instance, there's a scitype for time series data, another for Panel data and so on.\n",
-    "\n",
-    "- **_mtype_** is short for Machine Implementation Type which, for a defined scitype, specifies an exact python type and structure of representation. For instance, concrete time series is represented by a concrete `pandas.DataFrame` in `sktime`.\n",
-    "\n",
-    "scitypes and mtypes are encoded by strings in `sktime`, and each estimator has `SUPPORTED_MTYPES` that is used as a tag to search and filter estimators - more on that later.\n",
-    "\n",
-    "<INSERT SCITYPE-MYTYPE EXEMPLAR, Image-8>"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.1.2 Different `scitype` present in `sktime` and their utility\n",
-    "\n",
-    "1. `\"Series\"`: Representing Time Series Data\n",
-    "    - Single-Level Index represenations in Dataframe, 2D representation in numpy.\n",
-    "    - Can represent uni or multivariate data **&ast;**\n",
-    "    - Can represent (un)equally spaced data **ast;**\n",
-    "    - Example: Classifying state of a quantum system over time-dependent evolution.\n",
-    "\n",
-    "2. `\"Panel\"`: Representing Panel Data\n",
-    "    - Two-Level Index representations in Dataframe, 3D representation in numpy.\n",
-    "    - Can represent uni or multivariate data **&ast;**\n",
-    "    - Can represent (un)equally spaced data **&ast;**\n",
-    "    - Example: Prediction of Power Output of Solar Energy systems.\n",
-    "\n",
-    "3. `\"Hierarchical\"`: Representing Data that has pre-defined Hierarchy\n",
-    "    - Multi-Level Index representations in Dataframe\n",
-    "    - Non-Time outer indices represent higher hierarchy\n",
-    "    - Example: C "
+    "`pd-multiindex` = `pd.DataFrame` with 2-level `MultiIndex`, (instance, time), cols= variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Show basic examples of each scitype followed by a practical example"
+    "from sktime.datasets import load_osuleaf\n",
+    "\n",
+    "# load an example time series panel in pd-multiindex mtype\n",
+    "X, _ = load_osuleaf(return_type=\"pd-multiindex\")"
    ]
   },
   {
@@ -107,26 +98,126 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1.3 Brief overview to `\"Series\"` `scitype`\n",
-    "    -- TODO --"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.1.4 Introduction to `\"Panel\"` `scitype`\n",
-    "    -- TODO --"
+    "The osuleaf dataset has:\n",
+    "\n",
+    "* 412 individual time series instances\n",
+    "* one single variable, `dim_0`\n",
+    "* individual time series are observed at around 417 time points"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>dim_0</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>timepoints</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">0</th>\n",
+       "      <th>0</th>\n",
+       "      <td>0.550671</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.464716</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.375261</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.293060</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.206427</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">441</th>\n",
+       "      <th>422</th>\n",
+       "      <td>1.761683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>423</th>\n",
+       "      <td>1.838726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>424</th>\n",
+       "      <td>1.927078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>425</th>\n",
+       "      <td>2.004444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>426</th>\n",
+       "      <td>2.067112</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>188734 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   dim_0\n",
+       "    timepoints          \n",
+       "0   0           0.550671\n",
+       "    1           0.464716\n",
+       "    2           0.375261\n",
+       "    3           0.293060\n",
+       "    4           0.206427\n",
+       "...                  ...\n",
+       "441 422         1.761683\n",
+       "    423         1.838726\n",
+       "    424         1.927078\n",
+       "    425         2.004444\n",
+       "    426         2.067112\n",
+       "\n",
+       "[188734 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# TODO: Show practical examples of all major `mtype` and basic examples of minor ones"
+    "X"
    ]
   },
   {
@@ -134,18 +225,239 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1.5 Data Loaders for Panel Data\n",
-    "    -- TODO --"
+    "### 2.1.2 preferred format 2 - `numpy3D` specification"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`numpy3D` = 3D `np.ndarray` with index (instance, variable, time)\n",
+    "\n",
+    "instance/time index is interpreted as integer\n",
+    "\n",
+    "IMPORTANT: unlike `pd-multiindex`, this assumes:\n",
+    "\n",
+    "* all individual series have the same length\n",
+    "* all individual series have the same index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO-1: Load toy-dataset from sktime\n",
-    "# TODO-2: Load dataset from an external repo "
+    "from sktime.datasets import load_osuleaf\n",
+    "\n",
+    "# load an example time series panel in pd-multiindex mtype\n",
+    "X, _ = load_osuleaf(return_type=\"numpy3D\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(442, 1, 427)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1.3 loading and validity checking"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "for custom data sets:\n",
+    "\n",
+    "1. use `pandas` `read_csv` or similar utilities to obtain a `pd.DataFrame` or `np.ndarray`\n",
+    "2. try to bring the result in one of the preferred specifications\n",
+    "3. use the `check_is_mtype` utility to check compliance - inspect informative error messages\n",
+    "4. repeate 2-3 until the data format check passes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# let's pretend we just loaded this from csv\n",
+    "from sktime.datasets import load_osuleaf\n",
+    "\n",
+    "X_pd, _ = load_osuleaf(return_type=\"pd-multiindex\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "let's now check whether it complies with the `pd-multiindex` specification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sktime.datatypes import check_is_mtype\n",
+    "\n",
+    "valid, error_msg, metadata = check_is_mtype(X_pd, \"pd-multiindex\", return_metadata=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# is it valid?\n",
+    "valid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'is_univariate': True,\n",
+       " 'is_empty': False,\n",
+       " 'has_nans': False,\n",
+       " 'n_instances': 442,\n",
+       " 'is_one_series': False,\n",
+       " 'is_equal_length': True,\n",
+       " 'is_equally_spaced': True,\n",
+       " 'n_panels': 1,\n",
+       " 'is_one_panel': True,\n",
+       " 'mtype': 'pd-multiindex',\n",
+       " 'scitype': 'Panel'}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# helpful metadata, check if this is as per expectations\n",
+    "metadata"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "let's see what happens if it is not in the expected format.\n",
+    "\n",
+    "We have a `pd.DataFrame`, so if we check against `numpy3D`, it should complain:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid, error_msg, metadata = check_is_mtype(X_pd, \"numpy3D\", return_metadata=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"obj must be a numpy.ndarray, found <class 'pandas.core.frame.DataFrame'>\""
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "error_msg"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This tells us that we should first convert into `np.ndarray` as expected."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For further details on data formats, see the tutorial on [in-memory data representations and data loading](https://www.sktime.net/en/latest/examples/AA_datatypes_and_datasets.html#In-memory-data-representations-and-data-loading).\n",
+    "\n",
+    "This tutorial also contains full formal specifications of the mtypes (= machine representations).\n",
+    "\n",
+    "All supported in-memory representations are python inspectable in `sktime.datatypes.MTYPE_REGISTER`\n",
+    "\n",
+    "Note that this including \"exotic\", rarely used ones and representations of objects that aren't time series.\n"
    ]
   },
   {
@@ -336,8 +648,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "sktime-dl",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
