--- a/notebooks/02_panel_tasks.ipynb
+++ b/notebooks/02_panel_tasks.ipynb
@@ -46,7 +46,9 @@
     "4. _Forecasting_: Given historical data, predict the (near future) values by capturing temporal dependencies and patterns within each panel.\n",
     "    <TODO - Think of what image to add here, Image-6>\n",
     "5. _TODO: Add more obscure tasks (causal inference, survival analysis) or something more relevant to the talk - distances and kernel based_\n",
-    "    <TODO - Think of what image to add here, Image-7>"
+    "    <TODO - Think of what image to add here, Image-7>\n",
+    "\n",
+    "NOTE - same formats used for forecasting, transformers, etc"
    ]
   },
   {
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,121 +103,48 @@
     "The osuleaf dataset has:\n",
     "\n",
     "* 412 individual time series instances\n",
-    "* one single variable, `dim_0`\n",
-    "* individual time series are observed at around 417 time points"
+    "* one single variable per time series instances, `dim_0`\n",
+    "* individual time series are observed at 100 time points (the same number for all instances)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>dim_0</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th>timepoints</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">0</th>\n",
-       "      <th>0</th>\n",
-       "      <td>0.550671</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.464716</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.375261</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.293060</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.206427</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">441</th>\n",
-       "      <th>422</th>\n",
-       "      <td>1.761683</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>423</th>\n",
-       "      <td>1.838726</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>424</th>\n",
-       "      <td>1.927078</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>425</th>\n",
-       "      <td>2.004444</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>426</th>\n",
-       "      <td>2.067112</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>188734 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   dim_0\n",
-       "    timepoints          \n",
-       "0   0           0.550671\n",
-       "    1           0.464716\n",
-       "    2           0.375261\n",
-       "    3           0.293060\n",
-       "    4           0.206427\n",
-       "...                  ...\n",
-       "441 422         1.761683\n",
-       "    423         1.838726\n",
-       "    424         1.927078\n",
-       "    425         2.004444\n",
-       "    426         2.067112\n",
-       "\n",
-       "[188734 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sktime.datasets import load_basic_motions\n",
+    "\n",
+    "# load an example time series panel in pd-multiindex mtype\n",
+    "X, _ = load_basic_motions(return_type=\"pd-multiindex\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The basic motions dataset has:\n",
+    "\n",
+    "* 6 individual time series instances\n",
+    "* six variables per time series instance, `dim_0` to `dim_5`\n",
+    "* individual time series are observed at 100 time points (the same number for all instances)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "X"
    ]
@@ -245,32 +174,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sktime.datasets import load_osuleaf\n",
     "\n",
-    "# load an example time series panel in pd-multiindex mtype\n",
+    "# load an example time series panel in numpy mtype\n",
     "X, _ = load_osuleaf(return_type=\"numpy3D\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(442, 1, 427)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "The osuleaf dataset has:\n",
+    "\n",
+    "* 412 individual time series instances\n",
+    "* one single variable per time series instances\n",
+    "* individual time series are observed at 100 time points (the same number for all instances)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sktime.datasets import load_basic_motions\n",
+    "\n",
+    "# load an example time series panel in numpy mtype\n",
+    "X, _ = load_basic_motions(return_type=\"numpy3D\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The basic motions dataset has:\n",
+    "\n",
+    "* 6 individual time series instances\n",
+    "* six variables per time series instance\n",
+    "* individual time series are observed at 100 time points (the same number for all instances)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "X.shape"
    ]
@@ -298,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,20 +292,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# is it valid?\n",
     "valid"
@@ -350,30 +302,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'is_univariate': True,\n",
-       " 'is_empty': False,\n",
-       " 'has_nans': False,\n",
-       " 'n_instances': 442,\n",
-       " 'is_one_series': False,\n",
-       " 'is_equal_length': True,\n",
-       " 'is_equally_spaced': True,\n",
-       " 'n_panels': 1,\n",
-       " 'is_one_panel': True,\n",
-       " 'mtype': 'pd-multiindex',\n",
-       " 'scitype': 'Panel'}"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# helpful metadata, check if this is as per expectations\n",
     "metadata"
@@ -391,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,40 +331,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "valid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"obj must be a numpy.ndarray, found <class 'pandas.core.frame.DataFrame'>\""
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "error_msg"
    ]
@@ -453,11 +362,16 @@
    "source": [
     "For further details on data formats, see the tutorial on [in-memory data representations and data loading](https://www.sktime.net/en/latest/examples/AA_datatypes_and_datasets.html#In-memory-data-representations-and-data-loading).\n",
     "\n",
-    "This tutorial also contains full formal specifications of the mtypes (= machine representations).\n",
+    "The \"datatypes\" tutorial also contains:\n",
+    "\n",
+    "* full formal specifications of the mtypes (= machine representations)\n",
+    "* common examples for loading from csv and formatting\n",
+    "* utilities for loading data for commonly used benchmark problems\n",
     "\n",
     "All supported in-memory representations are python inspectable in `sktime.datatypes.MTYPE_REGISTER`\n",
     "\n",
-    "Note that this including \"exotic\", rarely used ones and representations of objects that aren't time series.\n"
+    "Note that this includes \"exotic\", rarely used ones and representations of objects that aren't time series.\n",
+    "Formats for time series panels are indicated by the `Panel` mtype.\n"
    ]
   },
   {
@@ -465,7 +379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.2 Classification Tasks\n",
+    "## 2.2 Time Series Classification, Regression, Clustering - Basic Vignettes\n",
     "\n",
     "    -- TODO: A simple, motivating problem --"
    ]
@@ -513,105 +427,6 @@
    "outputs": [],
    "source": [
     "# TODO: `scikit-learn` compatibility showcase for evaluation, provide in-house evaluation functions too"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2.3 Regression Tasks\n",
-    "    -- TODO: A simple, motivating problem, relevant to the first one --"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: Load the dataset and split"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.3.1 -- TODO: Decide Topic Name --: A small list of famous & simple estimators to 'solve' this problem"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO-1: Estimator-1\n",
-    "# TODO-2: Estimator-2\n",
-    "# TODO-3: Estimator-3"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.3.2 Evaluation Metrics for Time Series Regression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: `scikit-learn` compatibility showcase for evaluation, provide in-house evaluation functions too"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2.4 Clustering Tasks\n",
-    "    -- TODO: A simple, motivating problem, relevant to both problems --"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: Load the dataset and split"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.4.1 -- TODO: Decide Topic Name --: A small list of famous & simple estimators to 'solve' this problem"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO-1: Estimator-1\n",
-    "# TODO-2: Estimator-2\n",
-    "# TODO-3: Estimator-3"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.4.2 Evaluation Metrics for Time Series Clustering"
    ]
   },
   {
