--- a/notebooks/02_panel_tasks.ipynb
+++ b/notebooks/02_panel_tasks.ipynb
@@ -381,7 +381,63 @@
    "source": [
     "## 2.2 Time Series Classification, Regression, Clustering - Basic Vignettes\n",
     "\n",
-    "    -- TODO: A simple, motivating problem --"
+    "Above tasks are very similar to \"tabular\" classification, regression, clustering, as in `sklearn`\n",
+    "\n",
+    "Main distinction:\n",
+    "* in \"tabular\" classification etc, one (feature) instance row vector of features\n",
+    "* in TSC, one (feature) instance is a full time series, possibly unequal length, distinct index set"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: INSERT HELPFUL PICTURE HERE"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "More formally:\n",
+    "\n",
+    "* \"tabular\" classification: training pairs $(x_1, y_1), \\dots, (x_n, y_n)$, where $x_i$ are rows of a `pd.DataFrame` (same col types), and $y_i \\in \\mathcal{C}$ for a finite set $y_i \\in \\mathcal{C}$. We use these to train a classifier that predicts $y_* \\in \\mathcal{C}$ for a `pd.DataFrame` row $x_*$\n",
+    "* time series classification: training pairs $(x_1, y_1), \\dots, (x_n, y_n)$, where $x_i$ are time series from a certain domain, and $y_i \\in \\mathcal{C}$ for a finite set $y_i \\in \\mathcal{C}$. We use these to train a classifier that predicts $y_* \\in \\mathcal{C}$ for time series $x_*$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "very similar for time series regression, clustering - exercise left to reader :-)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`sktime` design implications:\n",
+    "\n",
+    "* need representation of collections of time series (panels), see Section 2.1\n",
+    "    * same as in \"adjacent\" learning tasks, e.g., panel forecasting\n",
+    "    * same as for transformation estimators\n",
+    "* algorithms that use sequentiality, can deal with unequal length etc\n",
+    "* algorithms usually based on distances or kernels between time series - need to cover that in framework\n",
+    "* but we can use familiar `fit` / `predict` and `scikit-learn` / `scikit-base` interface!"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2.3 Time Series Classification\n",
+    "\n"
    ]
   },
   {
