--- a/notebooks/02_panel_tasks.ipynb
+++ b/notebooks/02_panel_tasks.ipynb
@@ -436,8 +436,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2.3 Time Series Classification\n",
-    "\n"
+    "### 2.2.3 Time Series Classification - deployment vignette"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Basic deployment vignette for TSC:\n",
+    "\n",
+    "1. load/setup training data, `X` in a `Panel` format, `y` as 1D `np.ndarray`\n",
+    "2. load/setup new data for prediction (can be done after 2 too)\n",
+    "3. specify the classifier using `sklearn`-like syntax\n",
+    "4. fit classifier to training data, `fit(X, y)`\n",
+    "5. predict labels on new data, `predict(X_new)`"
    ]
   },
   {
@@ -446,7 +459,199 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Load the dataset and split"
+    "# steps 1, 2 - prepare osuleaf dataset (train and new)\n",
+    "from sktime.datasets import load_osuleaf\n",
+    "\n",
+    "X_train, y_train = load_osuleaf(split=\"train\", return_type=\"numpy3D\")\n",
+    "X_new, _ = load_osuleaf(split=\"test\", return_type=\"numpy3D\")\n",
+    "X_new = X_new[:2]  # smaller dataset for faster notebook runtime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this is in numpy3D format, but could also be pd-multiindex or other\n",
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# step 3 - specify the classifier\n",
+    "\n",
+    "# example 1 - 3-NN with simple dynamic time warping distance (requires numba)\n",
+    "clf = KNeighborsTimeSeriesClassifier(n_neighbors=3)\n",
+    "\n",
+    "# example 2:\n",
+    "# 3-nearest neighbour classifier with mean (over time points) pairwise Euclidean distance\n",
+    "# (requires scipy)\n",
+    "from sktime.classification.distance_based import KNeighborsTimeSeriesClassifier\n",
+    "from sktime.dists_kernels.compose_tab_to_panel import AggrDist\n",
+    "from sktime.dists_kernels import ScipyDist\n",
+    "\n",
+    "mean_eucl_dist = AggrDist(ScipyDist())\n",
+    "clf = KNeighborsTimeSeriesClassifier(n_neighbors=3, distance=mean_eucl_dist)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we could specify any `sktime` classifier here - the rest remains the same!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# all classifiers is scikit-learn / scikit-base compatible!\n",
+    "# nested parameter interface via get_params, set_params\n",
+    "clf.get_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# step 4 - fit/train the classifier\n",
+    "clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the classifier is now fitted\n",
+    "clf.is_fitted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# and we can inspect fitted parameters if we like\n",
+    "clf.get_fitted_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# step 5 - predict labels on new data\n",
+    "y_pred = clf.predict(X_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# y_pred is an 1D np.ndarray, similar to sklearn classification output\n",
+    "y_pred"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "all together in one cell:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# steps 1, 2 - prepare osuleaf dataset (train and new)\n",
+    "from sktime.datasets import load_osuleaf\n",
+    "\n",
+    "X_train, y_train = load_osuleaf(split=\"train\", return_type=\"pd-multiindex\")\n",
+    "X_new, _ = load_osuleaf(split=\"test\", return_type=\"pd-multiindex\")\n",
+    "X_new = X_new.loc[:2]  # smaller dataset for faster notebook runtime\n",
+    "\n",
+    "# step 3 - specify the classifier\n",
+    "from sktime.classification.distance_based import KNeighborsTimeSeriesClassifier\n",
+    "\n",
+    "clf = KNeighborsTimeSeriesClassifier(n_neighbors=3)\n",
+    "\n",
+    "# step 4 - fit/train the classifier\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "# step 5 - predict labels on new data\n",
+    "y_pred = clf.predict(X_new)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2.4 Time Series Classification - simple evaluation vignette"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluation is simila to `sklearn` classifiers - we split a dataset and evaluate performance on the test set.\n",
+    "\n",
+    "This includes as additional steps:\n",
+    "\n",
+    "* splitting the initial, historical data, e.g., using `train_test_split`\n",
+    "* comparing predictions with a held out data set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sktime.classification.distance_based import KNeighborsTimeSeriesClassifier\n",
+    "from sktime.datasets import load_osuleaf\n",
+    "\n",
+    "# data should be split inti train/test\n",
+    "X_train, y_train = load_osuleaf(split=\"train\", return_type=\"pd-multiindex\")\n",
+    "X_test, y_test = load_osuleaf(split=\"test\", return_type=\"pd-multiindex\")\n",
+    "\n",
+    "# step 3-5 are the same\n",
+    "clf = KNeighborsTimeSeriesClassifier(n_neighbors=3)\n",
+    "clf.fit(X_train, y_train)\n",
+    "y_pred = clf.predict(X_test)\n",
+    "\n",
+    "# for simplest evaluation, compare ground truth to predictions\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "accuracy_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2.5 Time Series Regression - basic vignettes"
    ]
   },
   {
